--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
-		<script src="../particles.js"></script>
+		<script src="particles.js"></script>
 		<script src="js/app.js"></script>
 		
 		<noscript>
