--- a/Archivos.html
+++ b/Archivos.html
@@ -16,7 +16,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
-		<script src="../particles.js"></script>
+		<script src="particles.js"></script>
 		<script src="js/app.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
