--- a/Archivos.html
+++ b/Archivos.html
@@ -52,6 +52,7 @@
 					<p></p>
 					<a href="TFM.pdf" class="button fit">TFM: Una introducción a los grupos de Carnot</a>
 					<a href="GST.pdf" class="button fit">El teorema de de Rham</a>
+					<a href="MAin.pdf" class="button fit">TFM: Las diversas concepciones de la variable algebraica en la enseñanza de ecuaciones</a>
 					
 				</div>
 	</body>
